# cargo-fast

./: Cargo.toml  LICENSE  README.md
src/: main.rs
