[package]
name = "cargo-fast"
version = "0.1.1"
authors = ["Avery Harnish <averyharnish@gmail.com>"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
edition = "2018"
description = "car go fast."
license = "MIT"
repository = "https://github.com/EverlastingBugstopper/cargo-fast"

[dependencies]
clap = "3.0.0-beta.2"
